--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <body>
         <!--Uploading the file-->
        <div id="speechContainer"> 
+        <div class="vertical-center">
            <h1>Upload New File</h1>
            <form method="POST" enctype="multipart/form-data ">
             <input type="file" name="file"/>
             <br>
+            
             <input type="submit" id = "submitButton"value="Transcribe"/>
           </form>
+          </div>
           <!--Printing out the transcript-->
           {% if transcript != "" %}
           <div id="speechTranscriptContainer">
